--- a/task/templates/task/index.html
+++ b/task/templates/task/index.html
@@ -6,20 +6,17 @@
   <body>
     <h1>list</h1>
     <form method="post">
-        {% csrf_token %}
-        <input type="text" name="title" placeholder="new work">
-        <button type="submit">add</button>
-
-
+      {% csrf_token %}
+      <input type="text" name="title" placeholder="new work" />
+      <button type="submit">add</button>
     </form>
     <ul>
       {% for task in tasks %}
       <li>
-        {{ task.title }}
-        {% if task.completed %}
-          <li>completed</li> 
-        {% else %} 
-          <li>not completed</li>
+        {{ task.title }} {% if task.completed %}
+        <span>completed</span>
+        {% else %}
+        <span>not completed</span>
         {% endif %}
       </li>
       {% endfor %}
